--- a/angularApp/src/styles.css
+++ b/angularApp/src/styles.css
@@ -1,1 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Nunito", sans-serif;
+  font-family: "Nunito Sans", sans-serif;
+}
+
+html {
+  background-color: rgb(15, 15, 15);
+  height: 100vh;
+}
+
+body{
+  background-color: rgb(15, 15, 15);
+}
