--- a/angularApp/src/app/shared/header.component.html
+++ b/angularApp/src/app/shared/header.component.html
@@ -74,7 +74,7 @@
               </div>
               <p class="menuP">Postavke</p>
             </button>
-            <button class="menubtn">
+            <button class="menubtn" (click)="NavigirajIZatvori('/oNama')">
               <div class="svgIcon">
                 <svg
                   style="fill: black; margin-right: 10px"
