Dodavanje komponente za uređivanje sekcije O nama, migracija angular projekta na noviju verziju, dodavanje ngx-markdown modula

--- a/angularApp/src/app/moj-racun/moj-racun.component.html
+++ b/angularApp/src/app/moj-racun/moj-racun.component.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<p class="myAccountTitle">Moj račun</p>
+<p class="myAccountTitle">Račun</p>
   <div class="settingsContainer">
     <img [src]="getImagePath()" class="userImage" />
     <p class="userName">{{racunPodaci?.ime}} {{racunPodaci?.prezime}}</p>
