Uređivanje UI-a i dodavanje defaultnog teksta O Nama unutar metode Generate testnih podataka

--- a/angularApp/src/app/o-nama-edit/o-nama-edit.component.css
+++ b/angularApp/src/app/o-nama-edit/o-nama-edit.component.css
@@ -4,6 +4,10 @@
   width: 100%;
 }
 
+.text-right {
+  text-align: right;
+}
+
 .plainTextarea, .markdownTextarea {
   color: black;
   height: 550px;
