--- a/angularApp/src/app/o-nama/o-nama.component.html
+++ b/angularApp/src/app/o-nama/o-nama.component.html
@@ -16,7 +16,7 @@
   <p class="AboutUs">O Nama</p>
   <div class="aboutText">
 
-    <markdown [data]="tekst">
+    <markdown class="mardownContainerText" [data]="tekst">
 
     </markdown>
 
