--- a/angularApp/src/app/o-nama-edit/o-nama-edit.component.html
+++ b/angularApp/src/app/o-nama-edit/o-nama-edit.component.html
@@ -23,7 +23,7 @@
         <markdown style="color: black" [data]="tekst"></markdown>
       </div>
     </div>
-    <button style="color: black" (click)="SpasiPromjene()">Spasi promjene</button>
+    <button class="btnOk" (click)="SpasiPromjene()">Spasi promjene</button>
   </div>
 </div>
 
