--- a/angularApp/src/app/o-nama/o-nama.component.css
+++ b/angularApp/src/app/o-nama/o-nama.component.css
@@ -13,6 +13,17 @@
   text-align: right;
 }
 
+.btnOk{
+  color: white;
+  background-color: #776b5d;
+  padding: 5px;
+  border-radius: 5px;
+  width: 80px;
+  height: fit-content;
+  text-align: center;
+  margin-top: 25px;
+}
+
 .mardownContainerText{
   color: black;
 }
