Dodavanje komponenti za prikaz pitanja i odgovora User-u i Admin-u

--- a/angularApp/src/app/shared/header.component.html
+++ b/angularApp/src/app/shared/header.component.html
@@ -127,7 +127,7 @@
   </p>
   <p style="font-family: 'Outfit', sans-serif;
       font-size: 1.6rem;">BookMySpot</p>
-  <p class="help">
+  <p [routerLink]="['/pitanjaOdgovori']" class="help">
     <a><svg
       xmlns="http://www.w3.org/2000/svg"
       width="25"
