Implementiranje liste neodgovorenih pitanja i mogucnosti odgovaranja i brisanja istih

--- a/angularApp/src/app/neodgovorena-pitanja-lista/neodgovorena-pitanja-lista.component.html
+++ b/angularApp/src/app/neodgovorena-pitanja-lista/neodgovorena-pitanja-lista.component.html
@@ -1,1 +1,48 @@
-<p>neodgovorena-pitanja-lista works!</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>About Us</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit&display=swap" rel="stylesheet">
+</head>
+
+<body>
+
+<div class="about">
+  <p style="margin-top: 70px" class="AboutUs">Pitanja i odgovori</p>
+  <div class="aboutText">
+
+    <div>
+      <button (click)="expandAll()">Proširi sve</button>
+      <button (click)="unexpandAll()">Zatvori sve</button>
+      <button [routerLink]="['/pitanjaOdgovori']">Odgovorena pitanja</button>
+      <button [routerLink]="['/neodgovorenaPitanja']">Pristigla pitanja <span class="brojUDugmetu" *ngIf="brojPristiglihPitanja !== 0">{{brojPristiglihPitanja}}</span></button>
+      <button [routerLink]="['/pitanjaOdgovori/pitanjaAdminLista']">Sva pitanja</button>
+
+      <div *ngFor="let item of faqItems" class="containerGlavni">
+        <div class="question" [ngClass]="{'expanded': item.isExpanded}" (click)="toggle(item)">
+          {{ item.pitanje }}
+          <div class="relative-time">
+            {{ item.relativeTime }}
+          </div>
+        </div>
+        <div class="answer" *ngIf="item.isExpanded">
+          <label for="odgovorNaPitanje">Odgovor: </label>
+          <input style="color: black" [(ngModel)]="item.odgovor" id="odgovorNaPitanje" name="odgovorNaPitanje" type="text">
+          <button (click)="PosaljiOdgovor(item.id, item.odgovor)" style="background-color: white; color: black">Pošalji</button>
+          <button (click)="ObrisiPitanje(item.id)" style="background-color: red; color: white; margin-left: auto; float: right;">Obriši Pitanje</button>
+        </div>
+      </div>
+    </div>
+
+
+  </div>
+</div>
+
+</body>
+
+</html>
