Add functionality for adding reviews

--- a/angularApp/src/app/home/home.component.html
+++ b/angularApp/src/app/home/home.component.html
@@ -13,7 +13,7 @@
 <div class="container">
     <div class="containercard" *ngFor="let kategorija of kategorijeLista" (click)="onCategoryClick(kategorija.kategorijaID)">
       <p class="cardtitle">{{kategorija.naziv}}</p>
-      <p class="cardsubtitle">1 Opcija</p>
+      <p class="cardsubtitle">Dostupne opcije: {{kategorija.brojOpcija}}</p>
       <img class="cardimg" [src]="kategorija.slika">
     </div>
 </div>
