--- a/angularApp/src/app/usluzni-objekt/usluzni-objekt.component.html
+++ b/angularApp/src/app/usluzni-objekt/usluzni-objekt.component.html
@@ -66,7 +66,7 @@
     
         <div class="datumRez">
           <label for="appt">Vrijeme početka termina:</label>
-          <select [(ngModel)]="odabranoVrijeme" class="datumRezV" required>
+          <select [(ngModel)] = "odabranoVrijeme" class="datumRezV" required>
             <option [ngValue]="null" disabled>Odaberi vrijeme</option>
             <option *ngFor="let termin of dostupniTermini" [ngValue]="termin">{{termin}}</option>
           </select>
@@ -81,39 +81,47 @@
 
       <div class="rezervacijaSmjestaja">
         <h3>Komentari i ocjene</h3>
-        <div class="comment">
+        <div class="comment" *ngFor="let recenzija of listaRecenzija">
           <div class="profilePicAndName">
-            <img src="../../assets/user.png" alt="" width="40px" height="40px" style="margin-right: 10px" />
-            <p>Emina Zucalo</p>
+            <img [src]="getImagePath(recenzija.korisnickiNalog.slika)" alt="" width="40px" height="40px" style="margin-right: 10px" />
+            <p>{{recenzija.korisnickiNalog.ime}} {{recenzija.korisnickiNalog.prezime}}</p>
           </div>
           <div>
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill"
+            <ng-container *ngFor="let star of getStars(); let i = index">
+              <svg *ngIf="i < recenzija.recenzijaOcjena" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-star-fill"
+                  viewBox="0 0 16 16">
+                  <path
+                    d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                </svg>
+              <svg *ngIf="i >= recenzija.recenzijaOcjena" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-star"
               viewBox="0 0 16 16">
               <path
-                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z" />
             </svg>
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill"
-              viewBox="0 0 16 16">
-              <path
-                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
-            </svg>
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill"
-              viewBox="0 0 16 16">
-              <path
-                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
-            </svg>
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill"
-              viewBox="0 0 16 16">
-              <path
-                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
-            </svg>
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill"
-              viewBox="0 0 16 16">
-              <path
-                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
-            </svg>
+            </ng-container>
           </div>
-          <p class="komentarOsobe">Prezadovoljna!</p>
+          <p class="komentarOsobe">{{recenzija.recenzijaTekst}}</p>
+        </div>
+
+        <div *ngIf="loginInfo().isLogiran == true" class="comment">
+          <div class="profilePicAndName">
+            <img [src]="getImagePath(logiraniKorisnik.slika)" alt="" width="40px" height="40px" style="margin-right: 10px" />
+            <p>{{logiraniKorisnik.ime}} {{logiraniKorisnik.prezime}}</p>
+          </div>
+          <div>
+            <select [(ngModel)]="odabranaOcjena" required class="uslugaSelect" style="width: 100%;">
+              <option [ngValue]="null" disabled>Odaberi ocjenu</option>
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+              <option>4</option>
+              <option>5</option>
+            </select>
+          </div>
+          <textarea [(ngModel)]="tekstRecenzije" name="" id="mesidzboks" cols="40" rows="5" style="background-color: #f2eade; resize: none;"></textarea>
+          <div class="divZaPosalji">
+            <button class="buttonPosalji" (click)="posaljiRecenziju()">Pošalji</button>
+          </div>
         </div>
       </div>
 </body>
