Implementacija vraćanja informacija logiranog korisnika na backendu

--- a/angularApp/src/app/moj-racun-edit/moj-racun-edit.component.css
+++ b/angularApp/src/app/moj-racun-edit/moj-racun-edit.component.css
@@ -281,6 +281,15 @@ svg {
   right: 0px;
 }
 
+.passwordBtn{
+  background-color: #b0a695;
+  border: none;
+  border-radius: 10px;
+  height: 25px;
+  width: 25px;
+  cursor: pointer;
+}
+
 .savecancel {
   background-color: #ebe3d5;
   height: 30px;
