--- a/angularApp/src/app/moj-racun-edit/moj-racun-edit.component.html
+++ b/angularApp/src/app/moj-racun-edit/moj-racun-edit.component.html
@@ -35,6 +35,7 @@
       type="text"
       id="fnameInput"
       class="accountInput"
+      [(ngModel)]="korisnikInformacije.ime"
     />
   </div>
   <div class="input-container">
@@ -43,6 +44,7 @@
       type="text"
       id="lnameInput"
       class="accountInput"
+      [(ngModel)]="korisnikInformacije.prezime"
     />
   </div>
   <div class="input-container">
@@ -51,6 +53,7 @@
       type="text"
       id="usernameInput"
       class="accountInput"
+      [(ngModel)]="korisnikInformacije.korisnickoIme"
     />
   </div>
   <div class="input-container">
@@ -59,6 +62,7 @@
       type="text"
       id="mailInput"
       class="accountInput"
+      [(ngModel)]="korisnikInformacije.email"
     />
   </div>
   <div class="input-container">
@@ -67,6 +71,7 @@
       type="text"
       id="phoneInput"
       class="accountInput"
+      [(ngModel)]="korisnikInformacije.telefon"
     />
   </div>
   <div class="input-container lastField">
