Omogućavanje uređivanja osnovnih informacija o prijavljenom korisniku

--- a/angularApp/src/app/moj-racun-edit/moj-racun-edit.component.html
+++ b/angularApp/src/app/moj-racun-edit/moj-racun-edit.component.html
@@ -93,7 +93,7 @@
     </label>
   </div>
   <div class="dugmad">
-    <button class="savecancel">Spremi</button>
+    <button (click)="SpasiPromjene()" class="savecancel">Spremi</button>
     <button [routerLink]="['/mojRacun']" class="savecancel">Odustani</button>
   </div>
 </div>
