--- a/angularApp/src/app/o-nama/o-nama.component.html
+++ b/angularApp/src/app/o-nama/o-nama.component.html
@@ -20,7 +20,7 @@
 
     </markdown>
 
-    <button class="btnOk" [routerLink]="['/oNamaEdit']">Uredi</button>
+    <button class="btnOk" [routerLink]="['/oNama/oNamaEdit']">Uredi</button>
 
   </div>
 </div>
