Implementacija mogućnosti promjene lozinke za korisnika

--- a/angularApp/src/app/moj-racun-edit/moj-racun-edit.component.html
+++ b/angularApp/src/app/moj-racun-edit/moj-racun-edit.component.html
@@ -63,7 +63,7 @@
   </div>
   <div class="input-container lastField">
     <label class="small-label sifra">Promijeni lozinku
-      <button class="passwordBtn">
+      <button [routerLink]="['/mojRacun/mojRacunEdit/editLozinka']" class="passwordBtn">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           width="16"
