Update stilova i dodatnih mogućnosti promjene lozinke

--- a/angularApp/src/app/edit-lozinka/edit-lozinka.component.css
+++ b/angularApp/src/app/edit-lozinka/edit-lozinka.component.css
@@ -238,6 +238,11 @@ svg {
   margin-top: 15px;
 }
 
+.toggle-password {
+  cursor: pointer;
+  color: black;
+}
+
 .accountInput {
   border: none;
   padding: 10px;
