Dodavanje komponente za brisanje korisničkog računa na frontendu

--- a/angularApp/src/app/moj-racun/moj-racun.component.html
+++ b/angularApp/src/app/moj-racun/moj-racun.component.html
@@ -46,7 +46,7 @@
         </div>
         Odjavite se
       </button>
-    <button class="userButton lastBtn">
+    <button [routerLink]="['/mojRacun/racunBrisanje']" class="userButton lastBtn">
       <div class="userSvgIcon">
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="black" class="bi bi-trash"
           viewBox="0 0 16 16">
