--- a/angularApp/src/app/usluzni-objekt/usluzni-objekt.component.html
+++ b/angularApp/src/app/usluzni-objekt/usluzni-objekt.component.html
@@ -34,36 +34,39 @@
     </div>
 
     <div class="Cjenovnik">
-        <div class="SezonskeCijene">
-            <h3>Cijene</h3>
-            <table class="cijenovnikTabela">
-            <thead>
-                <th>Usluga</th>
-                <th>Cijena</th>
-            </thead>
-            <tbody>
-                <tr *ngFor="let usluga of listaUsluga">
-                <td>{{usluga.naziv}} ({{usluga.trajanje}})</td>
-                <td>{{usluga.cijena}}</td>
-                </tr>
-            </tbody>
-            </table>
-        </div>
+      <div class="SezonskeCijene">
+        <h3>Cijene</h3>
+        <table class="cijenovnikTabela">
+          <thead>
+          <th>Usluga</th>
+          <th>Cijena</th>
+          </thead>
+          <tbody>
+          <tr *ngFor="let usluga of listaUsluga">
+            <td>
+              {{ usluga.naziv }}
+              <span *ngIf="usluga.trajanje">({{ usluga.trajanje }} min)</span>
+            </td>
+            <td>{{ usluga.cijena }}</td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
 
-    <div class="rezervacijaSmjestaja">
+      <div *ngIf="usluzniObjekt?.isSmjestaj == false" class="rezervacijaSmjestaja">
         <h3>Rezervacija</h3>
-        
+
         <select [(ngModel)]="odabranaUsluga" (change)="onDatumUslugaChange()" required class="datumRezV" style="width: 100%;">
           <option [ngValue]="null" disabled>Odaberi uslugu</option>
           <option *ngFor="let usluga of listaUsluga" [ngValue]="usluga">{{usluga.naziv}} ({{usluga.trajanje}} min)</option>
         </select>
-    
+
         <div class="datumRez">
           <label for="datumRezervacije">Datum termina:</label>
           <input [(ngModel)]="odabraniDatum" [min]="minDate" (change)="onDatumUslugaChange()" type="date" id="datumRezP" name="datumRezervacije" />
         </div>
-    
+
         <div class="datumRez">
           <label for="appt">Vrijeme početka termina:</label>
           <select [(ngModel)] = "odabranoVrijeme" class="datumRezV" required>
@@ -78,6 +81,32 @@
           <button *ngIf="loginInfo().isLogiran == false" class="buttonRezervisi" (click)="prijava()">Prijava</button>
         </div>
       </div>
+
+
+    <div *ngIf="usluzniObjekt?.isSmjestaj == true" class="rezervacijaSmjestaja">
+      <h3>Rezervacija</h3>
+
+      <select [(ngModel)]="odabranaUsluga" (change)="onSmjestajUsluga()" required class="datumRezV" style="width: 100%;">
+        <option [ngValue]="null" disabled>Odaberi uslugu</option>
+        <option *ngFor="let usluga of listaUsluga" [ngValue]="usluga">{{usluga.naziv}}</option>
+      </select>
+
+      <div class="datumRez">
+        <label for="datumPocetkaRezervacije">Datum useljenja:</label>
+        <input [(ngModel)]="datumPocetka" (ngModelChange)="onDatumPocetkaChange()" type="date" id="datumRezP" name="datumPocetkaRezervacije" [min]="minDate"/>
+      </div>
+
+      <div class="datumRez">
+        <label for="datumKrajaRezervacije">Datum iseljenja:</label>
+        <input [(ngModel)]="datumKraja" type="date" id="datumRezP" name="datumKrajaRezervacije" [min]="datumPocetka"/>
+      </div>
+
+      <div class="rezervacijaBox">
+        <button *ngIf="loginInfo().isLogiran == true" class="buttonRezervisi" (click)="rezervisiTerminSmjestaja()">Rezerviši</button>
+        <p *ngIf="loginInfo().isLogiran == false" style="margin-bottom: 5px;">Morate biti prijavljeni kako bi ste izvršili rezervaciju.</p>
+        <button *ngIf="loginInfo().isLogiran == false" class="buttonRezervisi" (click)="prijava()">Prijava</button>
+      </div>
+    </div>
 
       <div class="rezervacijaSmjestaja">
         <h3>Komentari i ocjene</h3>
